# Axon

./: .gitignore  CMakeLists.txt  README.md  ast.h  debug_consts.h  grammar.md  lexer.h  logging.h  main.cpp  on_memory.md
docs/: README.md  grammar.md  scratch.md  structure.md
scripts/: build.sh
src/: debug_consts.h  logging.cpp  logging.h  main.cpp  typedefs.h  utils.cpp  utils.h
src/ast/: ast.h  ast_codegen.cpp  ast_codegen_pointer.cpp  ast_parsing.cpp  ast_preregister.cpp  ast_register.cpp  ast_utils.cpp  generated.cpp  generated.h  llvm_utils.cpp  llvm_utils.h  module_state.cpp  module_state.h
src/cli/: cli.h
src/lexer/: lexer.cpp  lexer.h
src/module/: generated.cpp  generated.h  module_config.cpp  module_config.h  module_state.cpp  module_state.h
